--- a/.gitmodules
+++ b/.gitmodules
@@ -3,3 +3,8 @@
 	url = https://github.com/r-universe-org/cran-to-git
 	shallow = true
 	branch = HEAD
+[submodule "tidytuesdayR"]
+	path = tidytuesdayR
+	url = https://github.com/thebioengineer/tidytuesdayr
+	shallow = true
+	registered = true
